# small_llm_nature

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak  setup.cfg
.github/workflows/: tests.yml
data/: paragraph.txt  qa_corpus.txt
llm_nature/: char_ngram.py  dataset.py  metrics.py  qa.py  qa.py.bak  word_ngram.py  word_ngram.py.bak
scripts/: export_k_sweep.py  export_k_sweep.py.bak  markdown_tables.py  markdown_tables.py.bak  qa_ablate.py  qa_inspect.py  qa_inspect.py.bak  qa_phase_table.py  qa_predict_from_thresholds.py  qa_show_winners.py  qa_thresholds.py
small_llm_nature.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_char_ngram.py  test_metrics.py  test_qa.py
