[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-llm-nature"
version = "0.0.0"
description = "Transparent n-gram LM + scaling metrics + QA rerank + foil experiment"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
